fix:optimize rabbitmq code